<resources>
    <string name="show_admob_ads">no</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_insertitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_name">Healthy Basket</string>
    <string name="facebook_app_id" translatable="false">303220220780013</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb303220220780013</string>
    <string name="geoGoogleApi">AIzaSyCrfPdlkkkkpgQ1s4XkMJ686u8V9jd0NoU</string>
     <string name="link" translatable="false">https://healthybaskets.co/</string>
        <string name="servicepath" translatable="false">api/</string>
    <string name="imagepath" translatable="false">uploads/restaurant/</string>
    <string name="later_txt">Please try later!</string>
    <string name="facebook_validation">could not find email id </string>
    <string name="internet_check_error">Please Check Your internet connection</string>
    <string name="text_warning">Warning</string>
    <string name="colorErrorDialog">#303c44</string>
    <string name="txt_load_more">Load More</string>
    <string name="loading">loading</string>
    <string name="currency">$</string>
    <string name="ok">OK</string>
    <string name="address">Kumher Bharatpur, Rajasthan</string>
    <string name="servererror">No Data Found</string>
    <string name="Quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="statementquit">Are you sure you want to quit?</string>
    <string name="txt_gotogps">Goto Settings Page To Enable GPS</string>
    <string name="txt_gps_error">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="txt_try_later">Please try later!</string>
    <string name="txt_load">Loading</string>
    <string name="txt_aboutus">About Us</string>
    <string name="aboutus_filename">aboutus.html</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition_filename">tnc.html</string>
    <string name="txt_most_rated_stores">Most Rated Store</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_checkout">Checkout</string>
    <string name="norecord">No Records Found</string>
    <string name="loginmsg">Needs to login first!</string>
    <string name="BASIC_PRICE">Basic price</string>
    <string name="QUANTITY">Quantity</string>
    <string name="txt_search">Search</string>
    <string name="order_status">Order Status</string>
    <string name="txt_order_no">Order No</string>
    <string name="txt_order_amount">Order Amount</string>
    <string name="txt_estimated_delivery_time">Estimated Delivery Time</string>
    <string name="txt_order_time">Order Time</string>
    <string name="txt_complete_order">Complete Order</string>
    <string name="txt_address">ADDRESS</string>
    <string name="txt_phone_number">PHONE NUMBER</string>
    <string name="txt_timing">TIMING</string>
    <string name="txt_food_type">PRODUCT TYPE</string>
    <string name="txt_delivery_time">DELIVERY TIME</string>
    <string name="txt_delivery_type">DELIVERY TYPE</string>
    <string name="txt_products">PRODUCTS</string>
    <string name="share">Share!</string>
    <string name="sharetitle">Share Store with</string>
    <string name="more">More</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="km">km</string>
    <string name="login_with_google">Sign in With Google</string>
    <string name="login_with_delivery">Sign in as delivery boy</string>
    <string name="login_with_facebook">Sign in With Facebook</string>
    <string name="txt_new_register">Create new account</string>
    <string name="txt_forget_pass">Forget Password</string>
    <string name="or">OR</string>
    <string name="txt_login">Sign in</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="err_msg_password">Enter Valid Password</string>
    <string name="err_msg_email">Enter Valid Email_id</string>
    <string name="err_msg_name">Enter Valid Username</string>
    <string name="err_msg_phone">Enter Valid Phone Number</string>
    <string name="txt_valid_phone_number">Phone Number is Valid</string>
    <string name="txt_invalid_phonenumber">Phone Number is Invalid</string>
    <string name="txt_phone_required">Phone Number is required</string>
    <string name="img_delivery">img_delivery</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="phone_description">we requier your phone number to get in touch while delivering your order we also assure your data is secure with us and we will not misuse your data other than delivery purpose </string>
    <string name="txt_take_a_picture">Take a picture</string>
    <string name="txt_select_picture">Select picture</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="agree_t_and_c"><![CDATA[I agree to the T & C]]></string>
    <string name="hint_full_name">Full name</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="txt_map">Map</string>
    <string name="txt_more">MORE</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_map">Sorry! unable to create maps</string>
    <string name="no_stores">No more stores</string>
    <string name="opentill">Open:Open till</string>
    <string name="closetill">Close:open at</string>
    <string name="txt_my_orders">My Orders</string>
    <string name="txt_review">Review</string>
    <string name="revlogin">You have to login for give review</string>
    <string name="review_hint">Please write about your personal experience at this store</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_search_by_radius">Search by Radius</string>
    <string name="txt_distance">Distance</string>
    <string name="txt_radius">Radius</string>
    <string name="txt_current_location">Current Location</string>
    <string name="action_settings">Settings</string>
    <string name="txt_select_location">Select Location</string>
    <string name="txt_select_address">select address from map</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_place_order">Confirm Order</string>
    <string name="notbooked">Please try again.Your order is not booked.</string>
    <string name="error_lat_long">Latitude and Longitude are not valid!</string>
    <string name="plese_enter_place">Plese enter place</string>
    <string name="txt_search_stores">Search Stores</string>
    <string name="txt_search_on_map">Search on Map</string>
    <string name="txt_suggested_stores">Most Rated Stores</string>
    <string name="txt_category">Category</string>
    <string name="txt_favourite">Favourite</string>
    <string name="txt_share">Share</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_signin">Sign in</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_notification">My Orders</string>
    <string name="txt_medical">Order Medicine</string>
    <string name="txt_medical_order">My Medicine Order</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="txt_home_header">Home</string>
    <string name="search">Search Stores, Category</string>
    <string name="txt_signout">Sign Out</string>
    <string name="noorder">No order received yet!</string>
    <string name="error_logout">Are you sure you want to LogOut?</string>
    <string name="confirmorder1">Your order is placed with item</string>
    <string name="confirmorder2">;Total Amount is</string>
    <string name="txt_description">Description=</string>
    <string name="txt_price">Price=</string>
    <string name="txt_quantity">Quantity=</string>
    <string name="txt_total">TOTAL</string>
    <string name="timelineo1">Your Order has been placed</string>
    <string name="timelineo2">Order has been verified by Store</string>
    <string name="timelineo3">Order is processing</string>
    <string name="timelineo4">Order is out for delivery</string>
    <string name="timelineo5">Order is delivered</string>
    <string name="delivery_boy_login">Delivery Boy Login</string>
    <string name="email_required">Email Required</string>
    <string name="mobile_required">Mobile Number (10 digit)/Email Address</string>
    <string name="passward_required">Password Required</string>
    <string name="txt_setPresence">Set Your Presence</string>
    <string name="no_order_left">You Don\'t have any pending delivery yet, stay online you will get delivery soon.</string>
    <string name="txt_call_customer">Call Customer</string>
    <string name="txt_view_map">View Map</string>
    <string name="txt_order_history">Order History</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_delivery_boy">Delivery boy</string>
    <string name="txt_order_specifications">Order Specifications</string>
    <string name="timeline6">Order is rejected</string>
    <string name="cancle">Cancel</string>
    <string name="order_complete">Your assigned order is completed.</string>
    <string name="allready_given">Already feedback is given</string>
    <string name="cart_empty">your cart is empty</string>
    <string name="login">Login Successful</string>
    <string name="user_connect">User is Connect</string>
    <string name="conti">Continue..</string>
    <string name="log_out">Log Out?</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="paymet">Payment</string>
    <string name="items">Items</string>
    <string name="order_amount">Order Amount</string>
    <string name="your_experience">Your Experience</string>
    <string name="your_rating">YOUR RATING</string>
    <string name="hint">Please write about your personal experience at this Store</string>
    <string name="submit">Submit</string>
    <string name="no_review">No review Available</string>
    <string name="thanks_you">Thank you for your feedback</string>
    <string name="thanks">Thanks</string>
    <string name="review">Review Please</string>
    <string name="need_login_for_review">You have to login for give review</string>
    <string name="open_till"> OPEN : Close at</string>
    <string name="close"> CLOSE : Open at </string>
    <string name="Minute">Minute</string>
    <string name="ratings">Ratings</string>
    <string name="_15_reviews">(15 Reviews)</string>
    <string name="picked">PICKED</string>
    <string name="complete">COMPLETE</string>
    <string name="order_piked_for_delivery">Your assigned order is Picked for delivery.</string>
    <string name="select_terms">select terms and conditions</string>
    <string name="choose_profile">Choose Your Profile Picture</string>
    <string name="reg">Registration Successful</string>
    <string name="msg">Storage</string>
    <string name="mssg">Need permission to upload image!</string>
    <string name="please_wait">Please Wait</string>
    <string name="search_for_g_shop">Search 1000+ products</string>
    <string name="amount">Amount</string>
    <string name="rs">₹</string>
    <string name="packaging_size">Packagin Size</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_continue">Continue</string>
    <string name="mrp">MRP</string>
    <string name="res_open_msg">The store is currently closed now, Your order will be delivered tomorrow in the morning, our team will call you to confirm your order, Thank you So much for ordering on Healthy Basket, we always want you stay healthy and  live long.</string>
</resources>